--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,7 @@
 @import "./utils/variables";
 @import "./components/header";
+@import "./components/headermodal";
+@import "./components/burger";
 @import "./components/hero";
 @import "./components/modalka";
 @import "./components/formsmodalka";
