--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -2,6 +2,11 @@
   font-weight: 700;
   color: $second-color-black;
   margin-bottom: 10px;
+  @media screen and (max-width: 767px) {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
 }
 
 .advantages-container__text {
@@ -9,12 +14,39 @@
   color: $primary-text-color;
 }
 
-.advantages-container__list:not(:last-child) {
-  margin-right: 30px;
+.advantages-container__list {
+  @media screen and (min-width: 767px) {
+    flex-basis: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
+  &:not(:last-child) {
+    @media screen and (min-width: 0px) and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: 768px) {
+    }
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+    }
+  }
 }
 
 .advantages-container {
-  display: flex;
+  /* display: flex; */
+  /* @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  } */
+  @media screen and (max-width: 1199px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: -15px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+  }
 }
 
 .advantages-container__item {
