--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -1,5 +1,11 @@
 .client-container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  @media screen and (max-width: 1199px) {
+    margin: -15px;
+  }
 }
 
 .client-container__link {
@@ -10,6 +16,7 @@
   align-items: center;
   border: 1px solid #afb1b8;
   justify-content: center;
+
   border-radius: 5%;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -24,9 +31,33 @@
     fill: $accent-color;
   }
 }
+.client-container__item {
+  @media screen and (max-width: 767px) {
+    flex-basis: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
+  @media screen and (min-width: 480px) {
+    /* margin-bottom: 30px; */
+  }
+  @media screen and (max-width: 1199px) {
+    flex-basis: calc((100% - 8 * 15px) / 6);
+    margin: 15px;
+  }
+}
 
 .client-container__item:not(:last-child) {
-  margin-right: 30px;
+  /* margin-right: 30px; */
+  @media screen and (min-width: 480px) {
+  }
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (max-width: 1200px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+  }
 }
 
 .client-container__icons {
