--- a/sass/components/_footernav.scss
+++ b/sass/components/_footernav.scss
@@ -5,12 +5,26 @@
 }
 
 .footer {
-  display: flex;
-  align-items: baseline;
+  /* display: flex;
+  align-items: baseline; */
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: baseline;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: baseline;
+  }
 }
 
 .footer-element {
-  margin-right: 70px;
+  /* margin-right: 70px; */
+  @media screen and (min-width: 768px) {
+    margin-right: 70px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 70px;
+  }
 }
 
 .footer-element__logo {
@@ -23,6 +37,10 @@
   color: $second-color-white;
   margin-bottom: 20px;
   display: inline-block;
+  @media screen and (max-width: 767px) {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .footer-element__item {
@@ -34,14 +52,37 @@
   font-weight: 500;
   color: $second-color-white;
   font-style: normal;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
 }
 
 .footer-nav__address {
-  margin-bottom: 9px;
+  /*  margin-bottom: 9px; */
+  @media screen and (max-width: 767px) {
+    margin-bottom: 8px;
+    display: flex;
+    justify-content: center;
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 9px;
+  }
 }
-
+.footer-nav__item {
+  @media screen and (max-width: 767px) {
+    display: flex;
+    justify-content: center;
+  }
+}
 .footer-nav__item:not(:last-child) {
-  padding-bottom: 9px;
+  /* padding-bottom: 9px; */
+
+  @media screen and (max-width: 767px) {
+    padding-bottom: 8px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-bottom: 9px;
+  }
 }
 
 .footer-nav__link {
@@ -51,20 +92,41 @@
 }
 
 .heading-footer {
-  margin-bottom: 20px;
   color: $second-color-white;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  margin-bottom: 20px;
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 
 .footer.container {
-  display: flex;
-  align-items: baseline;
+  /* display: flex;
+  align-items: baseline; */
+  display: block;
+  @media screen and (min-width: 769px) {
+    display: flex;
+    align-items: baseline;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: baseline;
+  }
 }
 
 .footer-item {
-  margin-right: 93px;
+  /* margin-right: 93px; */
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-right: 93px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
+  }
 }
 
 .icons-subscr {
@@ -77,17 +139,17 @@
 .mail-subscr {
   width: 358px;
   height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
+  align-items: center;
+  padding-left: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: #2f303a;
   font-size: 16px;
   line-height: 1.2;
-  align-items: center;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-  padding-left: 10px;
 }
 
 .button-subscr {
@@ -97,13 +159,32 @@
   border-radius: 4px;
   border: 1px solid transparent;
   cursor: pointer;
-  padding: 10px 30px;
   letter-spacing: 0.06em;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.8;
-  margin-left: 12px;
+  padding: 10px 30px;
   align-items: center;
   justify-content: center;
   display: inline-flex;
+}
+.footer-form__mail {
+  @media screen and (max-width: 1199px) {
+    display: flex;
+    margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.footer-form__button {
+  @media screen and (max-width: 1199px) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 12px;
+    display: inline-flex;
+  }
 }
