--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,15 +1,50 @@
 .page-header {
   border-bottom: 1px solid #ececec;
-  height: 80px;
-  display: flex;
+  /* height: 80px;
+  display: flex; */
+  @media screen and (max-width: 767px) {
+    height: 60px;
+    display: flex;
+  }
+  @media screen and (min-width: 768px) {
+    height: 80px;
+    display: flex;
+  }
+  @media screen and (min-width: 1200px) {
+    height: 80px;
+    display: flex;
+  }
 }
 
-.contacts {
-  display: flex;
-  margin-left: auto;
+.contacts-list {
+  /* display: flex;
+  margin-left: auto; */
   letter-spacing: 0.02em;
 
-  & .container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    margin-left: auto;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin-left: auto;
+  }
+  @media screen and (max-width: 1199px) {
+    display: flex;
+    margin-left: auto;
+    flex-direction: column;
+  }
+}
+
+.contacts.container {
+  /* display: none; */
+  /* display: flex;
+    align-items: center; */
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+  }
+  @media screen and (min-width: 1200px) {
     display: flex;
     align-items: center;
   }
@@ -27,7 +62,13 @@
   font-size: 26px;
   line-height: 1.19;
   color: #000000;
-  margin-right: 93px;
+  /*  margin-right: 93px; */
+  @media screen and (min-width: 768px) {
+    margin-right: 88px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
+  }
 }
 
 .contacts-nav__element {
@@ -38,7 +79,13 @@
   font-weight: 500;
 
   &:not(:last-child) {
-    margin-right: 50px;
+    /* margin-right: 50px; */
+    @media screen and (min-width: 768px) {
+      margin-right: 50px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-right: 50px;
+    }
   }
 
   & :hover,
@@ -48,10 +95,25 @@
 }
 
 .contacts-item {
-  display: flex;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  /* display: flex; */
+  @media screen and (min-width: 768px) {
+    /* display: flex; */
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 
   &:not(:last-child) {
-    margin-right: 50px;
+    /* margin-right: 50px; */
+    @media screen and (max-width: 1199px) {
+      margin-bottom: 10px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-right: 50px;
+    }
   }
 
   & :hover,
@@ -68,21 +130,35 @@
 .contacts-item__link {
   color: $primary-text-color;
   text-decoration: none;
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 500;
+  @media screen and (min-width: 768px) {
+    /* display: flex;
+    align-items: center; */
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .contacts-item__svg {
-  margin-right: 10px;
+  /*  margin-right: 10px; */
   fill: currentColor;
+  @media screen and (min-width: 768px) {
+    margin-right: 10px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 10px;
+  }
 }
 
 .contacts-nav__link.current {
   color: $accent-color;
 
-  &::after {
+  /* &::after {
     content: "";
     display: block;
     height: 4px;
@@ -92,15 +168,57 @@
     bottom: -32px;
     left: 0;
     position: absolute;
+  } */
+  @media screen and (min-width: 768px) {
+    &::after {
+      content: "";
+      display: block;
+      height: 4px;
+      width: 100%;
+      background-color: $accent-color;
+      border-radius: 2px;
+      bottom: -32px;
+      left: 0;
+      position: absolute;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    &::after {
+      content: "";
+      display: block;
+      height: 4px;
+      width: 100%;
+      background-color: $accent-color;
+      border-radius: 2px;
+      bottom: -32px;
+      left: 0;
+      position: absolute;
+    }
   }
 }
 .contacts-nav__link {
-  position: relative;
+  /*  position: relative; */
   color: $second-color-black;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (min-width: 768px) {
+    position: relative;
+  }
+  @media screen and (min-width: 1200px) {
+    position: relative;
+  }
 }
 
 .contacts-nav__list {
-  display: flex;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+
+  /*  display: flex; */
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
