--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -15,9 +15,15 @@
 .hero__title {
   color: $second-color-white;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  text-align: center;
   letter-spacing: 0.06em;
+  font-size: 26px;
+  line-height: 1.16;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .hero__button {
