--- a/sass/components/_portfoliobutton.scss
+++ b/sass/components/_portfoliobutton.scss
@@ -1,7 +1,14 @@
 .filter {
-  margin-bottom: 50px;
-  display: flex;
-  justify-content: center;
+  @media screen and (max-width: 767px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .filter__button {
@@ -37,5 +44,10 @@
 
   &:not(:last-child) {
     margin-right: 8px;
+  }
+  @media screen and (max-width: 767px) {
+    &:nth-child(-n + 3) {
+      margin-bottom: 15px;
+    }
   }
 }
