--- a/sass/components/_portfoliocards.scss
+++ b/sass/components/_portfoliocards.scss
@@ -1,20 +1,30 @@
 .portfolio {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  @media screen and (max-width: 1199px) {
+    margin: -15px;
+  }
 }
 
 .portfolio-list {
-  background: $second-color-white;
-  box-sizing: border-box;
-  margin-right: 30px;
-  margin-bottom: 30px;
-
-  &:nth-child(3n) {
-    margin-right: 0;
+  @media screen and (max-width: 1199px) {
+    flex-basis: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
   }
+  @media screen and (min-width: 1200px) {
+    background: $second-color-white;
+    box-sizing: border-box;
+    margin-right: 30px;
+    margin-bottom: 30px;
 
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
   }
 }
 
