--- a/sass/components/_teamsvg.scss
+++ b/sass/components/_teamsvg.scss
@@ -1,5 +1,12 @@
 .team-conteiner__list:not(:last-child) {
-  margin-right: 30px;
+  /* margin-right: 30px; */
+  @media screen and (max-width: 480px) {
+  }
+  @media screen and (min-width: 768px) {
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+  }
 }
 
 .team-icons {
