--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,30 +1,46 @@
 .section.work {
   padding-top: 0;
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
 }
 
 .works {
-  display: flex;
+  /* display: flex; */
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 
 .works__item {
   position: relative;
 
   &:not(:last-child) {
-    margin-right: 30px;
+    /* margin-right: 30px; */
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+    }
   }
 }
 
 .works-box {
   position: absolute;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   z-index: 0;
   width: 100%;
   height: 70px;
   background: rgba(47, 48, 58, 0.8);
-  bottom: 0;
-  left: 0;
+  /* bottom: 0;
+  left: 0; */
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+    left: 0;
+  }
 }
 
 .works-box__item {
@@ -34,5 +50,8 @@
   color: #ffffff;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  text-align: center;
+  /* text-align: center; */
+  @media screen and (min-width: 1200px) {
+    text-align: center;
+  }
 }
