--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,5 +1,6 @@
 @import "./utils/variables";
 @import "./components/header";
+@import "./components/burger";
 @import "./components/portfoliobutton";
 @import "./components/portfoliocards";
 @import "./components/footernav";
