--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -14,13 +14,26 @@ body {
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 h1,
 h2,
@@ -34,21 +47,30 @@ p {
   padding: 0;
   list-style: none;
 }
-.heading-text {
-  margin-bottom: 50px;
-}
 
 .heading-text {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 2;
-  color: $second-color-black;
   text-align: center;
-  margin-bottom: 50px;
+  color: $second-color-black;
+  margin-bottom: 30px;
+  font-size: 28px;
+  line-height: 1.17;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 2;
+  }
 }
 .img,
 .team-images .box-gallery__images {
   display: block;
   width: 100%;
   height: auto;
+}
+@media screen and (min-width: 480px) {
+}
+@media screen and (min-width: 768px) {
+}
+@media screen and (min-width: 1200px) {
 }
