--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,5 @@
 @import "./components/client";
 @import "./components/footernav";
 @import "./components/footersvg";
+@import "./components/portfoliobutton";
+@import "./components/portfoliocards";
