--- a/sass/components/_footernav.scss
+++ b/sass/components/_footernav.scss
@@ -19,8 +19,9 @@
 
 .footer-element {
   /* margin-right: 70px; */
-  @media screen and (min-width: 768px) {
-    margin-right: 70px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-left: 76px;
+    margin-right: 165px;
   }
   @media screen and (min-width: 1200px) {
     margin-right: 70px;
@@ -37,7 +38,7 @@
   color: $second-color-white;
   margin-bottom: 20px;
   display: inline-block;
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1199px) {
     display: flex;
     justify-content: center;
   }
@@ -59,7 +60,7 @@
 
 .footer-nav__address {
   /*  margin-bottom: 9px; */
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1199px) {
     margin-bottom: 8px;
     display: flex;
     justify-content: center;
@@ -69,7 +70,7 @@
   }
 }
 .footer-nav__item {
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1199px) {
     display: flex;
     justify-content: center;
   }
@@ -97,7 +98,7 @@
   font-size: 14px;
   line-height: 1.14;
   margin-bottom: 20px;
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1199px) {
     text-align: center;
   }
 }
@@ -186,5 +187,13 @@
   @media screen and (min-width: 1200px) {
     margin-left: 12px;
     display: inline-flex;
+  }
+}
+.box-footer {
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 60px;
   }
 }
