--- a/sass/components/_portfoliocards.scss
+++ b/sass/components/_portfoliocards.scss
@@ -2,15 +2,22 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  @media screen and (max-width: 1199px) {
+  /* display: -webkit-box;
+  flex-wrap: wrap;
+  justify-content: center; */
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
     margin: -15px;
+    display: -webkit-box;
   }
 }
 
 .portfolio-list {
-  @media screen and (max-width: 1199px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     flex-basis: calc((100% - 4 * 15px) / 2);
     margin: 15px;
+    &:last-child {
+      margin-right: auto;
+    }
   }
   @media screen and (min-width: 1200px) {
     background: $second-color-white;
