--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,6 @@
 @import "./utils/variables";
 @import "./components/header";
-@import "./components/headermodal";
-@import "./components/burger";
+@import "./components/burgermodal";
 @import "./components/hero";
 @import "./components/modalka";
 @import "./components/formsmodalka";
