--- a/css/main.css
+++ b/css/main.css
@@ -84,59 +84,24 @@ p {
 
 .page-header {
   border-bottom: 1px solid #ececec;
-  /* height: 80px;
-  display: flex; */
-}
-
-@media screen and (max-width: 767px) {
-  .page-header {
-    height: 60px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
+  height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 @media screen and (min-width: 768px) {
   .page-header {
     height: 80px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .page-header {
-    height: 80px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
   }
 }
 
 .contacts-list {
-  /* display: flex;
-  margin-left: auto; */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: auto;
   letter-spacing: 0.02em;
-}
-
-@media screen and (min-width: 768px) {
-  .contacts-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-left: auto;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .contacts-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-left: auto;
-  }
 }
 
 @media screen and (max-width: 1199px) {
@@ -150,12 +115,6 @@ p {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-}
-
-.contacts.container {
-  /* display: none; */
-  /* display: flex;
-    align-items: center; */
 }
 
 @media screen and (min-width: 768px) {
@@ -196,7 +155,6 @@ p {
   font-size: 26px;
   line-height: 1.19;
   color: #000000;
-  /*  margin-right: 93px; */
 }
 
 @media screen and (min-width: 768px) {
@@ -219,10 +177,6 @@ p {
   font-weight: 500;
 }
 
-.contacts-nav__item:not(:last-child) {
-  /* margin-right: 50px; */
-}
-
 @media screen and (min-width: 768px) {
   .contacts-nav__item:not(:last-child) {
     margin-right: 50px;
@@ -240,19 +194,9 @@ p {
   color: #2196f3;
 }
 
-.contacts-item {
-  /* display: flex; */
-}
-
 @media screen and (max-width: 767px) {
   .contacts-item {
     display: none;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .contacts-item {
-    /* display: flex; */
   }
 }
 
@@ -262,10 +206,6 @@ p {
     display: -ms-flexbox;
     display: flex;
   }
-}
-
-.contacts-item:not(:last-child) {
-  /* margin-right: 50px; */
 }
 
 @media screen and (max-width: 1199px) {
@@ -292,18 +232,9 @@ p {
 .contacts-item__link {
   color: #757575;
   text-decoration: none;
-  /* display: flex;
-  align-items: center; */
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 500;
-}
-
-@media screen and (min-width: 768px) {
-  .contacts-item__link {
-    /* display: flex;
-    align-items: center; */
-  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -318,7 +249,6 @@ p {
 }
 
 .contacts-item__svg {
-  /*  margin-right: 10px; */
   fill: currentColor;
 }
 
@@ -336,17 +266,6 @@ p {
 
 .contacts-nav__link.current {
   color: #2196f3;
-  /* &::after {
-    content: "";
-    display: block;
-    height: 4px;
-    width: 100%;
-    background-color: $accent-color;
-    border-radius: 2px;
-    bottom: -32px;
-    left: 0;
-    position: absolute;
-  } */
 }
 
 @media screen and (min-width: 768px) {
@@ -363,22 +282,7 @@ p {
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .contacts-nav__link.current::after {
-    content: "";
-    display: block;
-    height: 4px;
-    width: 100%;
-    background-color: #2196f3;
-    border-radius: 2px;
-    bottom: -32px;
-    left: 0;
-    position: absolute;
-  }
-}
-
 .contacts-nav__link {
-  /*  position: relative; */
   color: #212121;
   text-decoration: none;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -395,10 +299,6 @@ p {
   .contacts-nav__link {
     position: relative;
   }
-}
-
-.contacts-nav__list {
-  /*  display: flex; */
 }
 
 @media screen and (max-width: 767px) {
@@ -468,8 +368,7 @@ p {
   top: 5px;
 }
 
-.menu-toggle:focus .menu__svg,
-.menu-toggle:hover .menu__svg {
+.menu__svg .menu-toggle {
   color: #2196f3;
 }
 
@@ -544,14 +443,14 @@ p {
   color: #2196f3;
 }
 
-.menu-social__link {
-  text-decoration: none;
-}
-
 .menu-social {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.menu-social:not(:last-child) {
+  margin-right: 20px;
 }
 
 .menu-social__link {
@@ -560,6 +459,7 @@ p {
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: #2196f3;
+  text-decoration: none;
 }
 
 .menu-nav__item.tel {
@@ -570,16 +470,12 @@ p {
   margin-bottom: 64px;
 }
 
-.menu-social__item:not(:last-child) {
-  margin-right: 20px;
-}
-
 .hero {
   background-color: #2f303a;
   text-align: center;
   padding: 200px 0;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/background.jpg);
-  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/background.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/background.jpg);
+  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -653,8 +549,6 @@ p {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* width: 528px;
-  height: 581px; */
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -971,18 +865,13 @@ p {
 }
 
 .advantages-container {
-  /* display: flex; */
-  /* @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
-  } */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 @media screen and (max-width: 1199px) {
   .advantages-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -webkit-box-pack: center;
@@ -994,9 +883,6 @@ p {
 
 @media screen and (min-width: 1200px) {
   .advantages-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
   }
@@ -1030,10 +916,6 @@ p {
   }
 }
 
-.works {
-  /* display: flex; */
-}
-
 @media screen and (min-width: 1200px) {
   .works {
     display: -webkit-box;
@@ -1046,10 +928,6 @@ p {
   position: relative;
 }
 
-.works__item:not(:last-child) {
-  /* margin-right: 30px; */
-}
-
 @media screen and (min-width: 1200px) {
   .works__item:not(:last-child) {
     margin-right: 30px;
@@ -1058,15 +936,10 @@ p {
 
 .works-box {
   position: absolute;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
   z-index: 0;
   width: 100%;
   height: 70px;
   background: rgba(47, 48, 58, 0.8);
-  /* bottom: 0;
-  left: 0; */
 }
 
 @media screen and (min-width: 1200px) {
@@ -1092,7 +965,6 @@ p {
   color: #ffffff;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  /* text-align: center; */
 }
 
 @media screen and (min-width: 1200px) {
@@ -1111,56 +983,22 @@ p {
   color: #757575;
   text-align: center;
   margin-bottom: 16px;
-  /* @media screen and (min-width: 480px) {
-    text-align: center;
-    margin-bottom: 16px;
-  }
-  @media screen and (min-width: 768px) {
-    text-align: center;
-    margin-bottom: 16px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    text-align: center;
-    margin-bottom: 16px;
-  } */
 }
 
 .team-conteiner {
-  /*  display: flex; */
-  /* @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
-  } */
-}
-
-@media screen and (max-width: 767px) {
-  .team-conteiner {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 @media screen and (max-width: 768px) {
   .team-conteiner {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
     margin: -15px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .team-conteiner {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
   }
 }
 
@@ -1204,10 +1042,6 @@ p {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-}
-
-.team-conteiner__list:not(:last-child) {
-  /* margin-right: 30px; */
 }
 
 @media screen and (min-width: 1200px) {
@@ -1312,17 +1146,22 @@ p {
   fill: #2196f3;
 }
 
+.client-container__icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 106px;
+  height: 60px;
+  fill: #afb1b8;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 @media screen and (max-width: 767px) {
   .client-container__item {
     -ms-flex-preferred-size: calc((100% - 4 * 15px) / 2);
         flex-basis: calc((100% - 4 * 15px) / 2);
     margin: 15px;
-  }
-}
-
-@media screen and (min-width: 480px) {
-  .client-container__item {
-    /* margin-bottom: 30px; */
   }
 }
 
@@ -1332,10 +1171,6 @@ p {
         flex-basis: calc((100% - 8 * 15px) / 6);
     margin: 15px;
   }
-}
-
-.client-container__item:not(:last-child) {
-  /* margin-right: 30px; */
 }
 
 @media screen and (max-width: 767px) {
@@ -1356,26 +1191,10 @@ p {
   }
 }
 
-.client-container__icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 106px;
-  height: 60px;
-  fill: #afb1b8;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .footer-container {
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
-}
-
-.footer {
-  /* display: flex;
-  align-items: baseline; */
 }
 
 @media screen and (min-width: 768px) {
@@ -1398,10 +1217,6 @@ p {
         -ms-flex-align: baseline;
             align-items: baseline;
   }
-}
-
-.footer-element {
-  /* margin-right: 70px; */
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -1457,10 +1272,6 @@ p {
   }
 }
 
-.footer-nav__address {
-  /*  margin-bottom: 9px; */
-}
-
 @media screen and (max-width: 1199px) {
   .footer-nav__address {
     margin-bottom: 8px;
@@ -1473,7 +1284,7 @@ p {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .footer-nav__address {
     margin-bottom: 9px;
   }
@@ -1488,10 +1299,6 @@ p {
         -ms-flex-pack: center;
             justify-content: center;
   }
-}
-
-.footer-nav__item:not(:last-child) {
-  /* padding-bottom: 9px; */
 }
 
 @media screen and (max-width: 767px) {
@@ -1527,8 +1334,6 @@ p {
 }
 
 .footer.container {
-  /* display: flex;
-  align-items: baseline; */
   display: block;
 }
 
@@ -1552,10 +1357,6 @@ p {
         -ms-flex-align: baseline;
             align-items: baseline;
   }
-}
-
-.footer-item {
-  /* margin-right: 93px; */
 }
 
 @media screen and (max-width: 767px) {
@@ -1720,11 +1521,14 @@ p {
   margin-right: 10px;
 }
 
+.filter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 @media screen and (max-width: 767px) {
   .filter {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     margin-bottom: 40px;
@@ -1734,9 +1538,6 @@ p {
 @media screen and (min-width: 768px) {
   .filter {
     margin-bottom: 50px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -1795,9 +1596,6 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  /* display: -webkit-box;
-  flex-wrap: wrap;
-  justify-content: center; */
 }
 
 @media screen and (min-width: 767px) and (max-width: 1199px) {
@@ -1815,6 +1613,22 @@ p {
   }
   .portfolio-list:last-child {
     margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) and (min-width: 1200px) {
+  .portfolio-list {
+    background: #ffffff;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .portfolio-list:nth-child(3n) {
+    margin-right: 0;
+  }
+  .portfolio-list:nth-last-child(-n + 3) {
+    margin-bottom: 0;
   }
 }
 
