--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -16,7 +16,6 @@
   align-items: center;
   border: 1px solid #afb1b8;
   justify-content: center;
-
   border-radius: 5%;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -31,35 +30,6 @@
     fill: $accent-color;
   }
 }
-.client-container__item {
-  @media screen and (max-width: 767px) {
-    flex-basis: calc((100% - 4 * 15px) / 2);
-    margin: 15px;
-  }
-  @media screen and (min-width: 480px) {
-    /* margin-bottom: 30px; */
-  }
-  @media screen and (max-width: 1199px) {
-    flex-basis: calc((100% - 8 * 15px) / 6);
-    margin: 15px;
-  }
-}
-
-.client-container__item:not(:last-child) {
-  /* margin-right: 30px; */
-  @media screen and (min-width: 480px) {
-  }
-  @media screen and (max-width: 767px) {
-    margin-bottom: 30px;
-  }
-  @media screen and (max-width: 1200px) {
-    margin-bottom: 30px;
-  }
-  @media screen and (min-width: 1200px) {
-    margin-right: 30px;
-  }
-}
-
 .client-container__icons {
   display: flex;
   width: 106px;
@@ -67,4 +37,25 @@
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.client-container__item {
+  @media screen and (max-width: 767px) {
+    flex-basis: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
+  @media screen and (max-width: 1199px) {
+    flex-basis: calc((100% - 8 * 15px) / 6);
+    margin: 15px;
+  }
+  &:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+    @media screen and (max-width: 1200px) {
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+    }
+  }
 }
