--- a/sass/components/_portfoliocards.scss
+++ b/sass/components/_portfoliocards.scss
@@ -2,9 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /* display: -webkit-box;
-  flex-wrap: wrap;
-  justify-content: center; */
+
   @media screen and (min-width: 767px) and (max-width: 1199px) {
     margin: -15px;
     display: -webkit-box;
@@ -17,6 +15,20 @@
     margin: 15px;
     &:last-child {
       margin-right: auto;
+    }
+    @media screen and (min-width: 1200px) {
+      background: $second-color-white;
+      box-sizing: border-box;
+      margin-right: 30px;
+      margin-bottom: 30px;
+
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
+
+      &:nth-last-child(-n + 3) {
+        margin-bottom: 0;
+      }
     }
   }
   @media screen and (min-width: 1200px) {
