--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ p {
   }
 }
 
-.contacts-list {
+.contacts {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -105,7 +105,7 @@ p {
 }
 
 @media screen and (max-width: 1199px) {
-  .contacts-list {
+  .contacts {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -118,7 +118,7 @@ p {
 }
 
 @media screen and (min-width: 768px) {
-  .contacts.container {
+  .container-contacts {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -129,7 +129,7 @@ p {
 }
 
 @media screen and (min-width: 1200px) {
-  .contacts.container {
+  .container-contacts {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -139,7 +139,7 @@ p {
   }
 }
 
-.contacts-nav {
+.nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -148,7 +148,7 @@ p {
           align-items: center;
 }
 
-.contacts-nav__logo {
+.logo__link {
   text-decoration: none;
   font-family: Raleway, cursive;
   font-weight: 700;
@@ -158,50 +158,50 @@ p {
 }
 
 @media screen and (min-width: 768px) {
-  .contacts-nav__logo {
+  .logo__link {
     margin-right: 88px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .contacts-nav__logo {
+  .logo__link {
     margin-right: 93px;
   }
 }
 
-.contacts-nav__element {
+.logo__element {
   color: #2196f3;
 }
 
-.contacts-nav__item {
+.navigation__item {
   font-weight: 500;
 }
 
 @media screen and (min-width: 768px) {
-  .contacts-nav__item:not(:last-child) {
+  .navigation__item:not(:last-child) {
     margin-right: 50px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .contacts-nav__item:not(:last-child) {
+  .navigation__item:not(:last-child) {
     margin-right: 50px;
   }
 }
 
-.contacts-nav__item :hover,
-.contacts-nav__item :focus {
+.navigation__item :hover,
+.navigation__item :focus {
   color: #2196f3;
 }
 
 @media screen and (max-width: 767px) {
-  .contacts-item {
+  .contacts__item {
     display: none;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .contacts-item {
+  .contacts__item {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -209,27 +209,27 @@ p {
 }
 
 @media screen and (max-width: 1199px) {
-  .contacts-item:not(:last-child) {
+  .contacts__item:not(:last-child) {
     margin-bottom: 10px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .contacts-item:not(:last-child) {
+  .contacts__item:not(:last-child) {
     margin-right: 50px;
   }
 }
 
-.contacts-item :hover,
-.contacts-item :focus {
+.contacts__item :hover,
+.contacts__item :focus {
   color: #2196f3;
 }
 
-.contacts-item:hover.contacts-item__svg, .contacts-item:focus.contacts-item__svg {
+.contacts__item:hover.contacts__svg, .contacts__item:focus.contacts__svg {
   fill: #2196f3;
 }
 
-.contacts-item__link {
+.contacts__link {
   color: #757575;
   text-decoration: none;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -238,7 +238,7 @@ p {
 }
 
 @media screen and (min-width: 1200px) {
-  .contacts-item__link {
+  .contacts__link {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -248,28 +248,28 @@ p {
   }
 }
 
-.contacts-item__svg {
+.contacts__svg {
   fill: currentColor;
 }
 
 @media screen and (min-width: 768px) {
-  .contacts-item__svg {
+  .contacts__svg {
     margin-right: 10px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .contacts-item__svg {
+  .contacts__svg {
     margin-right: 10px;
   }
 }
 
-.contacts-nav__link.current {
+.navigation__link.current {
   color: #2196f3;
 }
 
 @media screen and (min-width: 768px) {
-  .contacts-nav__link.current::after {
+  .navigation__link.current::after {
     content: "";
     display: block;
     height: 4px;
@@ -282,7 +282,7 @@ p {
   }
 }
 
-.contacts-nav__link {
+.navigation__link {
   color: #212121;
   text-decoration: none;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -290,25 +290,25 @@ p {
 }
 
 @media screen and (min-width: 768px) {
-  .contacts-nav__link {
+  .navigation__link {
     position: relative;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .contacts-nav__link {
+  .navigation__link {
     position: relative;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .contacts-nav__list {
+  .navigation {
     display: none;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .contacts-nav__list {
+  .navigation {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -316,7 +316,7 @@ p {
 }
 
 @media screen and (min-width: 1200px) {
-  .contacts-nav__list {
+  .navigation {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -401,11 +401,11 @@ p {
   right: 16px;
 }
 
-.menu-contacts {
+.navigation-menu {
   margin-bottom: 302px;
 }
 
-.menu-contacts__item {
+.navigation-menu__item {
   font-weight: 500;
   font-size: 40px;
   line-height: 1.17;
@@ -415,20 +415,20 @@ p {
   margin-bottom: 30px;
 }
 
-.menu-contacts__item:not(:last-child) {
+.navigation-menu__item:not(:last-child) {
   margin-bottom: 30px;
 }
 
-.menu-contacts__item .current {
+.navigation-menu__item .current {
   color: #2196f3;
 }
 
-.menu-contacts__link {
+.navigation-menu__link {
   text-decoration: none;
   color: #212121;
 }
 
-.menu-nav__link {
+.contacts-menu__link {
   text-decoration: none;
   font-weight: 500;
   font-size: 24px;
@@ -437,23 +437,23 @@ p {
   color: #757575;
 }
 
-.menu-nav__link.tel {
+.contacts-menu__link.tel {
   font-size: 34px;
   line-height: 1.17;
   color: #2196f3;
 }
 
-.menu-social {
+.social-menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.menu-social:not(:last-child) {
+.social-menu__item:not(:last-child) {
   margin-right: 20px;
 }
 
-.menu-social__link {
+.social-menu__link {
   font-weight: 500;
   font-size: 18px;
   line-height: 1.22;
@@ -462,11 +462,11 @@ p {
   text-decoration: none;
 }
 
-.menu-nav__item.tel {
+.contacts-menu__item:not(:last-child) {
   margin-bottom: 32px;
 }
 
-.menu-nav {
+.contacts-menu {
   margin-bottom: 64px;
 }
 
