--- a/sass/components/_burgermodal.scss
+++ b/sass/components/_burgermodal.scss
@@ -53,11 +53,11 @@
   top: 16px;
   right: 16px;
 }
-.menu-contacts {
+.navigation-menu {
   margin-bottom: 302px;
 }
 
-.menu-contacts__item {
+.navigation-menu__item {
   font-weight: 500;
   font-size: 40px;
   line-height: 1.17;
@@ -74,12 +74,12 @@
     color: $accent-color;
   }
 }
-.menu-contacts__link {
+.navigation-menu__link {
   text-decoration: none;
   color: #212121;
 }
 
-.menu-nav__link {
+.contacts-menu__link {
   text-decoration: none;
   font-weight: 500;
   font-size: 24px;
@@ -92,13 +92,15 @@
     color: #2196f3;
   }
 }
-.menu-social {
+.social-menu {
   display: flex;
+}
+.social-menu__item {
   &:not(:last-child) {
     margin-right: 20px;
   }
 }
-.menu-social__link {
+.social-menu__link {
   font-weight: 500;
   font-size: 18px;
   line-height: 1.22;
@@ -106,9 +108,9 @@
   color: #2196f3;
   text-decoration: none;
 }
-.menu-nav__item.tel {
+.contacts-menu__item:not(:last-child) {
   margin-bottom: 32px;
 }
-.menu-nav {
+.contacts-menu {
   margin-bottom: 64px;
 }
