--- a/css/main.css
+++ b/css/main.css
@@ -825,7 +825,7 @@ p {
   margin-bottom: 10px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   .advantages-container__title {
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -844,7 +844,7 @@ p {
   color: #757575;
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .advantages-container__list {
     -ms-flex-preferred-size: calc((100% - 4 * 15px) / 2);
         flex-basis: calc((100% - 4 * 15px) / 2);
@@ -852,7 +852,7 @@ p {
   }
 }
 
-@media screen and (min-width: 0px) and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   .advantages-container__list:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -877,7 +877,6 @@ p {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin: -15px;
   }
 }
 
@@ -985,20 +984,35 @@ p {
   margin-bottom: 16px;
 }
 
-.team-conteiner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 480px) {
   .team-conteiner {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-conteiner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin: -15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-conteiner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
 }
 
@@ -1009,13 +1023,13 @@ p {
   background-color: #ffffff;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .team-conteiner__list {
     margin-bottom: 30px;
   }
 }
 
-@media screen and (min-width: 481px) {
+@media screen and (min-width: 768px) {
   .team-conteiner__list {
     -ms-flex-preferred-size: calc((100% - 4 * 15px) / 2);
         flex-basis: calc((100% - 4 * 15px) / 2);
@@ -1112,9 +1126,10 @@ p {
           justify-content: center;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .client-container {
-    margin: -15px;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
 }
 
@@ -1157,7 +1172,7 @@ p {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   .client-container__item {
     -ms-flex-preferred-size: calc((100% - 4 * 15px) / 2);
         flex-basis: calc((100% - 4 * 15px) / 2);
@@ -1173,13 +1188,13 @@ p {
   }
 }
 
-@media screen and (max-width: 767px) {
-  .client-container__item:not(:last-child) {
-    margin-bottom: 30px;
-  }
+.client-container__item:not(:last-child) {
+  /* @media screen and (max-width: 1200px) {
+      margin-bottom: 30px;
+    } */
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 480px) {
   .client-container__item:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -1205,24 +1220,6 @@ p {
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .footer-element {
-    margin-left: 76px;
-    margin-right: 165px;
   }
 }
 
@@ -1301,7 +1298,7 @@ p {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   .footer-nav__item:not(:last-child) {
     padding-bottom: 8px;
   }
@@ -1337,17 +1334,6 @@ p {
   display: block;
 }
 
-@media screen and (min-width: 769px) {
-  .footer.container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .footer.container {
     display: -webkit-box;
@@ -1359,15 +1345,9 @@ p {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   .footer-item {
     margin-bottom: 60px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .footer-item {
-    margin-right: 93px;
   }
 }
 
@@ -1471,6 +1451,8 @@ p {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
 }
 
@@ -1527,7 +1509,7 @@ p {
   display: flex;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   .filter {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -1602,6 +1584,12 @@ p {
   .portfolio {
     margin: -15px;
     display: -webkit-box;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .portfolio-list {
+    margin-bottom: 30px;
   }
 }
 
