--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -3,8 +3,8 @@
   flex-wrap: wrap;
   justify-content: center;
 
-  @media screen and (max-width: 1199px) {
-    margin: -15px;
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
   }
 }
 
@@ -39,7 +39,7 @@
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-container__item {
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 480px) {
     flex-basis: calc((100% - 4 * 15px) / 2);
     margin: 15px;
   }
@@ -48,12 +48,12 @@
     margin: 15px;
   }
   &:not(:last-child) {
-    @media screen and (max-width: 767px) {
+    @media screen and (min-width: 480px) {
       margin-bottom: 30px;
     }
-    @media screen and (max-width: 1200px) {
+    /* @media screen and (max-width: 1200px) {
       margin-bottom: 30px;
-    }
+    } */
     @media screen and (min-width: 1200px) {
       margin-right: 30px;
     }
