--- a/sass/components/_portfoliocards.scss
+++ b/sass/components/_portfoliocards.scss
@@ -10,6 +10,9 @@
 }
 
 .portfolio-list {
+  @media screen and (min-width: 480px) {
+    margin-bottom: 30px;
+  }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     flex-basis: calc((100% - 4 * 15px) / 2);
     margin: 15px;
