--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -10,13 +10,18 @@
 }
 
 .team-conteiner {
-  display: flex;
-  @media screen and (max-width: 768px) {
-    flex-wrap: wrap;
+  @media screen and (min-width: 480px) {
     justify-content: center;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     margin: -15px;
   }
   @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
   }
 }
 
@@ -25,10 +30,10 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: $second-color-white;
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 767px) {
     margin-bottom: 30px;
   }
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 4 * 15px) / 2);
     margin: 15px;
   }
