--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,15 +1,24 @@
 .hero {
   background-color: #2f303a;
   text-align: center;
-  padding: 200px 0;
+  padding: 118px 60px;
   background-image: linear-gradient(
       to bottom,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/background.jpg);
+    url(../../images/header1x.jpg);
   background-size: cover;
   background-position: center;
+  @media screen and (min-width: 1200px) {
+    padding: 200px 0;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../../images/Header2x.jpg);
+  }
 }
 
 .hero__title {
