--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -10,7 +10,9 @@
     url(../images/header1x.jpg);
   background-size: cover;
   background-position: center;
-  @media screen and (min-width: 768px) {
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     padding: 200px 0;
     background-image: linear-gradient(
         to bottom,
@@ -20,6 +22,15 @@
       url(../images/header2x.jpg);
   }
 }
+/*  @media screen and (min-width: 768px) {
+    padding: 200px 0;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/header2x.jpg);
+  } */
 
 .hero__title {
   color: $second-color-white;
