--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -10,7 +10,32 @@
     url(../images/header1x.jpg);
   background-size: cover;
   background-position: center;
+  @media not all,
+    screen and (-webkit-min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/header1x.jpg);
+    background-size: cover;
+    background-position: center;
+  }
   @media screen and (min-width: 768px) {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/header2x.jpg);
+    background-size: cover;
+    background-position: center;
+  }
+}
+
+/* @media screen and (min-width: 768px) {
     padding: 200px 0;
     background-image: linear-gradient(
         to bottom,
@@ -18,8 +43,7 @@
         rgba(47, 48, 58, 0.4)
       ),
       url(../images/header2x.jpg);
-  }
-}
+  } */
 
 .hero__title {
   color: $second-color-white;
