--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,4 +1,4 @@
-.advantages-container__title {
+.advantages__title {
   font-weight: 700;
   color: $second-color-black;
   margin-bottom: 10px;
@@ -9,12 +9,12 @@
   }
 }
 
-.advantages-container__text {
+.advantages__text {
   line-height: 1.71;
   color: $primary-text-color;
 }
 
-.advantages-container__list {
+.advantages__item {
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 4 * 15px) / 2);
     margin: 15px;
@@ -31,7 +31,7 @@
   }
 }
 
-.advantages-container {
+.advantages {
   display: flex;
   @media screen and (max-width: 1199px) {
     flex-wrap: wrap;
@@ -42,7 +42,7 @@
   }
 }
 
-.advantages-container__item {
+.advantages__box {
   background-color: #f5f4fa;
   border-radius: 4px;
   padding: 25px 0 25px;
@@ -51,7 +51,7 @@
   margin-bottom: 30px;
 }
 
-.advantages-container__icon {
+.advantages__icon {
   height: 70px;
   width: 70px;
 }
