--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -1,4 +1,4 @@
-.client-container {
+.client-box {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -8,7 +8,7 @@
   }
 }
 
-.client-container__link {
+.client-box__link {
   align-items: center;
   display: flex;
   width: 170px;
@@ -25,12 +25,12 @@
     border-color: $accent-color;
   }
 
-  &:hover .client-container__icons,
-  &:focus .client-container__icons {
+  &:hover .client-box__icons,
+  &:focus .client-box__icons {
     fill: $accent-color;
   }
 }
-.client-container__icons {
+.client-box__icons {
   display: flex;
   width: 106px;
   height: 60px;
@@ -38,7 +38,7 @@
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.client-container__item {
+.client-box__item {
   @media screen and (min-width: 480px) {
     flex-basis: calc((100% - 4 * 15px) / 2);
     margin: 15px;
