--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,7 +1,7 @@
 .section.team {
   background-color: #f5f4fa;
 }
-.team-conteiner__work {
+.team__text {
   font-size: 16px;
   line-height: 1.18;
   color: $primary-text-color;
@@ -9,7 +9,7 @@
   margin-bottom: 16px;
 }
 
-.team-conteiner {
+.team {
   @media screen and (min-width: 480px) {
     justify-content: center;
   }
@@ -25,7 +25,7 @@
   }
 }
 
-.team-conteiner__list {
+.team__item {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -39,12 +39,12 @@
   }
 }
 
-.team-conteiner__description {
+.team__box {
   padding-top: 30px;
   padding-bottom: 30px;
 }
 
-.team-conteiner__text {
+.team__title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
