--- a/sass/components/_teamsvg.scss
+++ b/sass/components/_teamsvg.scss
@@ -1,17 +1,17 @@
-.team-conteiner__list:not(:last-child) {
+.team__item:not(:last-child) {
   @media screen and (min-width: 1200px) {
     margin-right: 30px;
   }
 }
 
-.team-icons {
+.social-icons {
   display: flex;
   width: 100%;
   align-items: center;
   justify-content: center;
 }
 
-.team-icons__link {
+.social-icons__link {
   display: flex;
   width: 44px;
   height: 44px;
@@ -26,13 +26,13 @@
     background-color: $accent-color;
   }
 
-  &:hover .team-icons__svg,
-  &:focus .team-icons__svg {
+  &:hover .social-icons__svg,
+  &:focus .social-icons__svg {
     fill: white;
   }
 }
 
-.team-icons__svg {
+.social-icons__svg {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
@@ -40,6 +40,6 @@
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-icons__item:not(:last-child) {
+.social-icons__item:not(:last-child) {
   margin-right: 10px;
 }
