--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,6 @@ p {
 
 .container-contacts {
   position: relative;
-  width: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -853,6 +852,9 @@ p {
 .agreement__item {
   display: block;
   margin-bottom: 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media screen and (max-width: 1199px) {
@@ -909,7 +911,7 @@ p {
   margin-bottom: 10px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .advantages__title {
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -936,7 +938,7 @@ p {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .advantages__item:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -944,7 +946,7 @@ p {
 
 @media screen and (min-width: 1200px) {
   .advantages__item:not(:last-child) {
-    margin-right: 30px;
+    /* margin-right: 30px; */
   }
 }
 
@@ -952,6 +954,12 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .advantages {
+    margin: -15px;
+  }
 }
 
 @media screen and (max-width: 1199px) {
@@ -1097,6 +1105,7 @@ p {
     display: flex;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
+    margin: 0;
   }
 }
 
@@ -1108,7 +1117,7 @@ p {
 }
 
 @media screen and (max-width: 767px) {
-  .team__item {
+  .team__item:not(:last-child) {
     margin-bottom: 30px;
   }
 }
@@ -1118,6 +1127,12 @@ p {
     -ms-flex-preferred-size: calc((100% - 4 * 15px) / 2);
         flex-basis: calc((100% - 4 * 15px) / 2);
     margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__item {
+    margin: 0;
   }
 }
 
@@ -1205,9 +1220,13 @@ p {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  /* justify-content: center; */
+}
+
+@media screen and (max-width: 1199px) {
+  .client-box {
+    margin: -15px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1224,7 +1243,7 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 170px;
+  /* width: 170px; */
   height: 92px;
   align-items: center;
   border: 1px solid #afb1b8;
@@ -1256,7 +1275,7 @@ p {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .client-box__item {
     -ms-flex-preferred-size: calc((100% - 4 * 15px) / 2);
         flex-basis: calc((100% - 4 * 15px) / 2);
@@ -1264,17 +1283,25 @@ p {
   }
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .client-box__item {
-    -ms-flex-preferred-size: calc((100% - 8 * 15px) / 6);
-        flex-basis: calc((100% - 8 * 15px) / 6);
+    -ms-flex-preferred-size: calc((100% - 6 * 15px) / 3);
+        flex-basis: calc((100% - 6 * 15px) / 3);
     margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client-box__item {
+    -ms-flex-preferred-size: calc((100% - 6 * 15px) / 6);
+        flex-basis: calc((100% - 6 * 15px) / 6);
+    /* margin: 15px; */
   }
 }
 
 @media screen and (min-width: 480px) {
   .client-box__item:not(:last-child) {
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
   }
 }
 
@@ -1298,6 +1325,12 @@ p {
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer-element {
+    margin-bottom: 60px;
   }
 }
 
@@ -1339,12 +1372,6 @@ p {
   font-weight: 500;
   color: #ffffff;
   font-style: normal;
-}
-
-@media screen and (max-width: 767px) {
-  .footer-nav {
-    margin-bottom: 60px;
-  }
 }
 
 @media screen and (max-width: 1199px) {
@@ -1417,21 +1444,21 @@ p {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 }
 
 @media screen and (min-width: 480px) {
   .footer-item {
-    margin-bottom: 60px;
+    /* margin-bottom: 60px; */
   }
 }
 
 @media screen and (min-width: 1200px) {
   .footer-item {
-    margin-right: 93px;
+    /* margin-right: 93px; */
   }
 }
 
@@ -1540,6 +1567,12 @@ p {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .box-footer {
+    margin-right: 93px;
+  }
+}
+
 .footer-icons {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1605,6 +1638,7 @@ p {
 }
 
 .filter__button {
+  font-weight: 500;
   background-color: #f5f4fa;
   color: #212121;
   border: 1px solid transparent;
@@ -1653,15 +1687,17 @@ p {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-@media screen and (min-width: 767px) and (max-width: 1199px) {
-  .portfolio {
+  /* margin: -15px; */
+  /* justify-content: center; */
+  /* @media screen and (min-width: 767px) and (max-width: 1199px) {
     margin: -15px;
     display: -webkit-box;
+  } */
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio {
+    margin: -15px;
   }
 }
 
@@ -1669,8 +1705,8 @@ p {
   width: 100%;
 }
 
-@media screen and (min-width: 480px) {
-  .portfolio-list {
+@media screen and (max-width: 767px) {
+  .portfolio-list:not(:last-child) {
     margin-bottom: 30px;
   }
 }
@@ -1681,19 +1717,13 @@ p {
         flex-basis: calc((100% - 4 * 15px) / 2);
     margin: 15px;
   }
-  .portfolio-list:last-child {
-    margin-right: auto;
-  }
 }
 
 @media screen and (min-width: 1200px) {
   .portfolio-list {
-    -ms-flex-preferred-size: calc((100% - 8 * 15px) / 3);
-        flex-basis: calc((100% - 8 * 15px) / 3);
+    -ms-flex-preferred-size: calc((100% - 6 * 15px) / 3);
+        flex-basis: calc((100% - 6 * 15px) / 3);
     margin: 15px;
-  }
-  .portfolio-list:nth-child(3n) {
-    margin-right: 0;
   }
   .portfolio-list:nth-last-child(-n + 3) {
     margin-bottom: 0;
@@ -1703,6 +1733,7 @@ p {
 .portfolio-list__item {
   padding-top: 20px;
   padding-bottom: 20px;
+  padding-left: 24px;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
@@ -1714,14 +1745,14 @@ p {
   line-height: 2;
   letter-spacing: 0.06em;
   color: #212121;
-  padding-left: 24px;
+  /* padding-left: 24px; */
 }
 
 .portfolio-list__description {
   font-size: 16px;
   line-height: 1.87;
   color: #757575;
-  padding-left: 24px;
+  /* padding-left: 24px; */
 }
 
 .portfolio-list__link {
