--- a/sass/components/_portfoliobutton.scss
+++ b/sass/components/_portfoliobutton.scss
@@ -11,6 +11,7 @@
 }
 
 .filter__button {
+  font-weight: 500;
   background-color: #f5f4fa;
   color: $second-color-black;
   border: 1px solid transparent;
