--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -2,7 +2,7 @@
   font-weight: 700;
   color: $second-color-black;
   margin-bottom: 10px;
-  @media screen and (min-width: 480px) {
+  @media screen and (max-width: 767px) {
     align-items: center;
     justify-content: center;
     display: flex;
@@ -20,19 +20,23 @@
     margin: 15px;
   }
   &:not(:last-child) {
-    @media screen and (min-width: 480px) {
+    @media screen and (max-width: 767px) {
       margin-bottom: 30px;
     }
     @media screen and (min-width: 768px) {
     }
     @media screen and (min-width: 1200px) {
-      margin-right: 30px;
+      /* margin-right: 30px; */
     }
   }
 }
 
 .advantages {
   display: flex;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin: -15px;
+  }
   @media screen and (max-width: 1199px) {
     flex-wrap: wrap;
     justify-content: center;
