--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -1,8 +1,11 @@
 .client-box {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
 
+  /* justify-content: center; */
+  @media screen and (max-width: 1199px) {
+    margin: -15px;
+  }
   @media screen and (min-width: 1200px) {
     flex-wrap: nowrap;
   }
@@ -11,7 +14,7 @@
 .client-box__link {
   align-items: center;
   display: flex;
-  width: 170px;
+  /* width: 170px; */
   height: 92px;
   align-items: center;
   border: 1px solid #afb1b8;
@@ -39,17 +42,21 @@
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-box__item {
-  @media screen and (min-width: 480px) {
+  @media screen and (max-width: 767px) {
     flex-basis: calc((100% - 4 * 15px) / 2);
     margin: 15px;
   }
-  @media screen and (max-width: 1199px) {
-    flex-basis: calc((100% - 8 * 15px) / 6);
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    flex-basis: calc((100% - 6 * 15px) / 3);
     margin: 15px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 6 * 15px) / 6);
+    /* margin: 15px; */
   }
   &:not(:last-child) {
     @media screen and (min-width: 480px) {
-      margin-bottom: 30px;
+      /* margin-bottom: 30px; */
     }
 
     @media screen and (min-width: 1200px) {
