--- a/sass/components/_portfoliocards.scss
+++ b/sass/components/_portfoliocards.scss
@@ -1,33 +1,32 @@
 .portfolio {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  @media screen and (min-width: 768px) {
+    margin: -15px;
+  }
+  /* margin: -15px; */
+  /* justify-content: center; */
 
-  @media screen and (min-width: 767px) and (max-width: 1199px) {
+  /* @media screen and (min-width: 767px) and (max-width: 1199px) {
     margin: -15px;
     display: -webkit-box;
-  }
+  } */
 }
 
 .portfolio-list {
   width: 100%;
-  @media screen and (min-width: 480px) {
-    margin-bottom: 30px;
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     flex-basis: calc((100% - 4 * 15px) / 2);
     margin: 15px;
-    &:last-child {
-      margin-right: auto;
-    }
   }
   @media screen and (min-width: 1200px) {
-    flex-basis: calc((100% - 8 * 15px) / 3);
+    flex-basis: calc((100% - 6 * 15px) / 3);
     margin: 15px;
-
-    &:nth-child(3n) {
-      margin-right: 0;
-    }
 
     &:nth-last-child(-n + 3) {
       margin-bottom: 0;
@@ -38,6 +37,7 @@
 .portfolio-list__item {
   padding-top: 20px;
   padding-bottom: 20px;
+  padding-left: 24px;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
@@ -49,14 +49,14 @@
   line-height: 2;
   letter-spacing: 0.06em;
   color: $second-color-black;
-  padding-left: 24px;
+  /* padding-left: 24px; */
 }
 
 .portfolio-list__description {
   font-size: 16px;
   line-height: 1.87;
   color: $primary-text-color;
-  padding-left: 24px;
+  /* padding-left: 24px; */
 }
 
 .portfolio-list__link {
