--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -22,6 +22,7 @@
   @media screen and (min-width: 1200px) {
     display: flex;
     flex-wrap: nowrap;
+    margin: 0;
   }
 }
 
@@ -31,11 +32,16 @@
   border-radius: 0px 0px 4px 4px;
   background-color: $second-color-white;
   @media screen and (max-width: 767px) {
-    margin-bottom: 30px;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 4 * 15px) / 2);
     margin: 15px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin: 0;
   }
 }
 
